<resources>
    <string name="app_name">PrayerTimes</string>
    <string name="prayer_times">PRAYER TIMES</string>

    <string name="notificationTitle">Enable message notifications/</string>
    <string name="logo">Logo</string>
    <string name="prayer">Prayer</string>
    <string name="times">Times</string>


    <!-- Prefrences -->
    <string name="manual">manual</string>
    <string name="manual_title">Manual Settings</string>
    <string name="manual_summary">Calculates the prayer times based on preferred parameters</string>

    <string name="juristic">juristic</string>
    <string name="juristic_title">Juristic Method</string>
    <string name="juristic_default">0</string>
    <string-array name="juristic_entries">
        <item> AlShafi\'i </item>
        <item> Hanafi </item>
    </string-array>
    <string-array name="juristic_values">
        <item> 0 </item>
        <item> 1 </item>
    </string-array>

    <string name="calculation">calculation</string>
    <string name="calculation_title">Calculation Conventions</string>
    <string name="calculation_default">0</string>
    <string-array name="calculation_entries">
        <item> Jafari</item>
        <item> University of Islamic Sciences, Karachi </item>
        <item> Islamic Society of North America </item>
        <item> Muslim World League </item>
        <item> Umm al-Qura, Makkah </item>
        <item> Egyptian General Authority of Survey </item>
        <item> University of Tehran </item>
    </string-array>
    <string-array name="calculation_values">
        <item>0</item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
    </string-array>
    <string name="latitude">latitude</string>
    <string name="latitude_title">Latitude Adjustments</string>
    <string name="latitude_default">0</string>
    <string-array name="latitude_entries">
        <item>None</item>
        <item>Middle of the Night</item>
        <item>1/7 of the Night</item>
        <item>Angle based Method</item>
    </string-array>
    <string-array name="latitude_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="time">time</string>
    <string name="time_title">Time Format</string>
    <string name="time_default">0</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="gps_settings_title">GPS settings\n</string>
    <string name="gps_settings_text">GPS is not enabled, you must activate it first from the settings to get the Qibla direction.</string>
    <string name="menu_qibla">Qibla menu</string>
    <string name="permission_not_garanted">permission not \ngaranted</string>
    <string name="coord">Coordinates:</string>
    <string name="locationunready">Please check the GPS settings and try again</string>
    <string name="gpsplz">Check the GPS settings to be able to determine the direction of the Qiblah</string>
    <string name="qibladirection">Qiblah:</string>
    <string name="consignes">Instructions</string>
    <string name="qiblatips">To get accurate orientation, please place the phone on a flat surface, check the GPS settings, then re-enter this menu.</string>
    <string name="fromnorth">Degrees from the north</string>
    <string name="longitude">Longitude</string>
    <string name="Qibla">Qibla</string>
    <string-array name="time_entries">
        <item>24 Hours</item>
        <item>12 Hours</item>
        <item>12-hour format with no suffix</item>
        <item> floating point number </item>
    </string-array>
    <string-array name="time_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>